app/design/frontend/Travers/default/Magento_Catalog/styles/module/_product-hero.scss
// Container div for: main product info, gallery, & related products
/*
    <div class="product-hero">
        <div class="product-hero__info">...</div>
        <div class="block related">...</div>
    </div>
*/

$product-inventory-table--header__font-size: 24px;
$product-inventory-table--header__font-size--desktop: 16px;
$product-hero__button-and-catalog__width: 240px;

.product-hero {
    display: flex;
    flex-wrap: wrap;

    @include max-screen($screen__m) {
        flex-direction: column;
    }

    &__info {
        display: flex;
        flex-wrap: wrap;
        align-content: start;
        width: calc(100% - #{$width__product-related} - #{$indent__xl});

        @include max-screen($screen__l) {
            width: 100%;
        }
    }

    .block.related {
        order: 4;
        float: none;
        width: 100%;

        @include min-screen($screen__l) {
            width: $width__product-related;
            order: 2;
        }
    }

    .product.media,
    .product-info-main {
        float: none;
        width: auto;

        @include max-screen($screen__m) {
            width: 100%;
        }
    }

    .product.media {
        order: 1;
        width: 100%;

        @include min-screen($screen__m) {
            width: calc(100% - #{$width__product-info} - #{$indent__xl});
        }
    }

    .product-info-main {
        order: 2;
        display: flex;
        flex-direction: column;

        @include max-screen($screen__m) {
            margin-bottom: $indent__m;
        }

        @include min-screen($screen__m) {
            width: $width__product-info;
            margin-left: $indent__xl;
        }

        .product.attribute.overview {
            order: 1;
        }

        .product-add-form {
            order: 2;
        }

        .product-social-links {
            order: 3;
            margin-top: $indent__s;
        }

        .stock-info-popup-trigger {
            text-transform: uppercase;
            cursor: pointer;
            font-weight: $font-weight__semibold;
            font-family: $font-family__sans-serif;
            color: $link__color;

            @include hover {
                color: $c-royal;
            }
        }
    }

    .product-info-price {
        .manufacturer_price {
            margin-top: $indent__m;
            margin-bottom: 15px;
            font-size: 15px;
            font-weight: $font-weight__semibold;
            color: $c-dusty-grey;
        }

        .price-box .price-from::after {
            content: '-';
            font-size: 26px;
            line-height: 1;
            font-weight: $font-weight__semibold;
            margin-left: $indent__xs;
        }
    }

    .product.info.detailed {
        order: 3;
        width: 100%;

        @include min-screen($screen__l) {
            margin-right: 35px;
        }

        .data.switch {
            font-family: $font-family__sans-serif;
            text-transform: uppercase;
            font-size: 16px;

            &::after {
                font-size: 16px;
                top: 50%;
                transform: translateY(-50%);
            }

            @include min-screen($screen__m) {
                background-color: $c-grey;
            }
        }

        .description {
            ul li {
                font-size: $font-size__base--desktop;
            }
        }
    }

    .product-options-bottom {
        display: flex;
        align-items: center;

        .pricing {
            order: 1;
            margin-top: $indent__s;
        }
    }

    .percent-saved {
        display: none !important; // override JS
    }

    .as-low-as {
        font-size: $font-size__base--desktop;
        font-weight: $font-weight__extrabold;
        text-transform: uppercase;

        .price-wrapper {
            font-size: 22px;
        }
    }

    .page-title {
        font-size: 30px;
        font-weight: $font-weight__regular;
        margin-bottom: $indent__m;
    }

    .product-info-stock-sku {
        margin-top: 20px;

        span:not(.stock-info-popup-trigger) {
            margin-right: $indent__xs;
            font-size: $font-size__base;
            font-weight: $font-weight__semibold;

            @include min-screen($screen__m) {
                font-size: $font-size__base--desktop;
            }
        }

        .product.sku {
            display: block;
        }

        .yotpo-display-wrapper {
            display: block;
            margin-top: $indent__xs;
            margin-bottom: 15px;
        }

        .yotpo-icon.yotpo-icon-star {
            margin-right: 1px;
            color: $c-royal;
        }

        .yotpoBottomLine {
            margin-bottom: $indent__xl;
            line-height: 1;
        }
    }

    .product-add-form {
        form {
            display: flex;
            flex-wrap: wrap;
            align-items: center;

            .box-tocart {
                order: -2;
                margin: 0;

                .fieldset::before {
                    display: none;
                }
            }

            .pricing {
                flex-basis: 70%;
                order: -1;
                margin-left: $indent__xs;
                margin-top: $indent__base;
                font-size: $font-size__base--desktop;
                font-weight: $font-weight__semibold;
            }

            .actions {
                flex-basis: 100%;
                margin-top: $indent__base;
            }
        }

        .tocart {
            @include min-screen($screen__m) {
                max-width: $product-hero__button-and-catalog__width;
                width: 100%;
            }
        }
    }

    .product-reviews-summary {
        margin-top: $indent__xs;
    }

    .fotorama__stage {
        border: 1px solid $c-grey;
        box-sizing: border-box;
    }

    .fotorama__thumb-border {
        border: 2px solid $c-royal;
    }
}

.master-catalog-listing {
    border: 1px solid $c-grey;
    max-width: 460px;
    width: 100%;
    margin: $indent__m 0;
    padding: 12px;
    box-sizing: border-box;

    @include min-screen($screen__xs) {
        max-width: $product-hero__button-and-catalog__width;
    }

    .header {
        @include bryant-park-headings-h3;
        font-weight: $font-weight__semibold;
        margin: 0;
        margin-bottom: $indent__s;
    }

    a {
        @include icon-svg(
            $icon       : catalog,
            $fill       : $primary__color,
            $width      : 20px,
            $height     : auto,
            $pseudo     : before
        );
        font-size: 16px;

        &::before {
            padding-right: 7px;
            margin-bottom: 2px;
        }
    }
}

.product-inventory-table {
    .no-inventory {
        text-align: center;
    }

    h2 {
        margin-top: 0;
        text-align: center;
        font-size: $product-inventory-table--header__font-size;

        @include min-screen($screen__m) {
            margin: $indent__l 0;
        }
    }

    &__desktop {
        display: none;

        thead {
            border-bottom: 2px solid $c-royal;

            th {
                padding: $indent__xs;
                font-size: $product-inventory-table--header__font-size--desktop;
            }
        }

        tbody tr {
            border-bottom: 1px solid $c-grey;

            td {
                padding: $indent__xs;
            }
        }
    }

    &__mobile {
        .inventory-table--row {
            padding: $indent__xs;
            border-top: 1px solid $c-grey;

            &:last-of-type {
                border-bottom: 1px solid $c-grey;
            }
        }

        strong {
            margin-right: $indent__xs;
        }

        p {
            margin: 2px 0;
        }
    }

    @include min-screen($screen__m) {
        &__mobile {
            display: none;
        }

        &__desktop {
            display: block;
        }
    }
}

.popup-stock-info {
    @include max-screen($screen__m) {
        &.modal-popup {
            left: 0;
            padding: 15px;
            box-sizing: border-box;
        }
    }

    .modal-inner-wrap {
        width: 100%;
        padding: $indent__m;

        .action-close {
            &::before {
                font-size: 40px;
            }

            @include hover {
                color: $c-cobalt;
            }
        }

        @include min-screen($screen__m) {
            max-width: 600px;
        }
    }
}

